Improved all script files for Windows, Linux, and macOS